# KGateway

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  Cargo.toml  Dockerfile  README.md  config.example.json  docker-compose.yml
.github/workflows/: ci.yml
charts/kgateway/: .helmignore  Chart.yaml  values.yaml
charts/kgateway/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  serviceaccount.yaml
crates/kgateway-core/: Cargo.toml
crates/kgateway-core/benches/: hotpath.rs
crates/kgateway-core/src/: context.rs  engine.rs  error.rs  keyselect.rs  lib.rs  mcp.rs  observer.rs  plugin.rs  provider.rs  router.rs  schema.rs  trace.rs
crates/kgateway-plugins/: Cargo.toml
crates/kgateway-plugins/benches/: pipeline.rs
crates/kgateway-plugins/src/: governance.rs  lib.rs  logging.rs  pricing.rs  redaction.rs  semantic_cache.rs
crates/kgateway-providers/: Cargo.toml
crates/kgateway-providers/src/: anthropic.rs  azure.rs  bedrock.rs  cohere.rs  gemini.rs  http.rs  lib.rs  model_listing.rs  openai.rs  openai_compat.rs
crates/kgateway-server/: Cargo.toml
crates/kgateway-server/src/: anthropic_ingress.rs  api_catalog.rs  api_docs.rs  app.rs  auth.rs  banner.rs  config.rs  handlers.rs  lib.rs  main.rs  metrics.rs  otel.rs
crates/kgateway-server/tests/: api_e2e.rs  chat_e2e.rs
crates/kgateway-store/: Cargo.toml
crates/kgateway-store/src/: governance_store.rs  lib.rs  pgvector.rs  postgres.rs  sqlite.rs  vector.rs
docs/: 01-architecture.md  02-roadmap.md  03-providers.md  04-plugins.md  05-frontend.md  06-deployment.md  07-quality.md  08-getting-started.md  09-security.md  11-logs-plan.md  12-content-capture-plan.md  13-redaction-rbac-plan.md  14-analytics-plan.md  15-performance.md  16-configuration.md  17-otlp-plan.md  18-parity-audit.md  README.md
scripts/: smoke.sh  start.sh  validate-live.sh
ui/: README.md  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
ui/app/: globals.css  layout.tsx  page.tsx  template.tsx
ui/app/cache/: page.tsx
ui/app/docs/: page.tsx
ui/app/logs/: analytics.tsx  page.tsx
ui/app/mcp/: page.tsx
ui/app/playground/: page.tsx
ui/app/plugins/: page.tsx
ui/app/providers/: page.tsx
ui/app/sessions/: page.tsx
ui/app/sessions/[id]/: page.tsx
ui/app/settings/: page.tsx
ui/app/virtual-keys/: page.tsx
ui/components/: charts.tsx  sankey.tsx  sidebar.tsx  trace-waterfall.tsx
ui/components/baroque/: empty-state.tsx  filigree.tsx  ornament-divider.tsx  use-count-up.ts  use-reduced-motion.ts  use-reveal.ts  use-theme.ts  webgl-background.tsx
ui/components/baroque/shaders/: silk.ts
ui/components/ui/: dialog.tsx  tag-input.tsx
ui/lib/: api.ts  format.ts  provider-icons.tsx  session-insights.ts  status.ts  time.ts
