[workspace]
resolver = "2"
members = [
    "crates/kgateway-core",
    "crates/kgateway-providers",
    "crates/kgateway-plugins",
    "crates/kgateway-store",
    "crates/kgateway-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/kelvinkwong/kgateway"
rust-version = "1.88"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# http
axum = { version = "0.8", features = ["multipart"] }
# NOTE: `http2` matters for real-time SSE — some provider edges (e.g. z.ai) buffer
# streaming responses over HTTP/1.1 but flush per-chunk over h2.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart", "http2"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AWS SigV4 signing (hand-rolled, for the Bedrock connector)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# redaction (M11): pattern detection + reversible AES-256-GCM mapping encryption
regex = "1"
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# persistence
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "macros"] }

# randomness (weighted key selection)
rand = "0.8"

# errors / util
thiserror = "2"
anyhow = "1"
bytes = "1"
arc-swap = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry OTLP export (M15) — HTTP/protobuf transport (reqwest), no gRPC/tonic.
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["http-proto", "reqwest-client", "trace", "metrics"] }

# testing
wiremock = "0.6"

# internal crates
kgateway-core = { path = "crates/kgateway-core" }
kgateway-providers = { path = "crates/kgateway-providers" }
kgateway-plugins = { path = "crates/kgateway-plugins" }
kgateway-store = { path = "crates/kgateway-store" }

[profile.release]
lto = "thin"
codegen-units = 1
