[package]
name = "kgateway-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
# `test-util` enables `#[tokio::test(start_paused = true)]` for deterministic timeout tests.
tokio = { workspace = true, features = ["test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hotpath"
harness = false
