[package]
name = "kgateway-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "kgateway-server"
path = "src/main.rs"

[dependencies]
kgateway-core = { workspace = true }
kgateway-providers = { workspace = true }
kgateway-plugins = { workspace = true }
kgateway-store = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = "0.1"
wiremock = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
